# render3d

./: .clang-format  .editorconfig  CMakeLists.txt  Makefile  README.md
src/: canvas.cpp  canvas.hpp  colors.hpp  main.cpp
src/math/: container.hpp  geometry.hpp  matrix.hpp  point3.hpp  utils.hpp  vec3.hpp
tests/src/: canvas_test.cpp  colors_test.cpp  main.cpp  math_test.cpp  matrix_test.cpp
